# Fi-Wi-Microphone

./: .gitignore  LICENSE  README.md
esp32_firmware/: CMakeLists.txt
esp32_firmware/components/u8g2_hal/: CMakeLists.txt  u8g2_esp32_hal.c  u8g2_esp32_hal.h
esp32_firmware/main/: CMakeLists.txt  app_tasks.c  app_tasks.h  hardware_control.c  hardware_control.h  main.c  network_stream.c  network_stream.h  project_config.h
python_client/: connection_gui_2.py
